@@ -1,3 +1,6 @@
+28 June 2010: Matthijs
+- Implement timeshift
+
 23 June 2010: Matthijs
 - Run once option
 
